modified:   src/app/components/dashboard1/our-visitors/our-visitors.component.html 	modified:   src/app/components/dashboard1/sales-overview/sales-overview.component.html 	modified:   src/app/components/dashboard1/top-cards/top-cards.component.html 	modified:   src/app/components/dashboard1/top-cards/top-cards.component.ts 	modified:   src/app/layouts/full/full.component.html 	modified:   src/app/layouts/full/vertical/header/header.component.html 	modified:   src/app/layouts/full/vertical/header/header.component.ts 	modified:   src/app/layouts/full/vertical/sidebar/sidebar-data.ts 	modified:   src/app/pages/apps/add-policy/add-policy.component.html 	modified:   src/app/pages/apps/add-policy/add-policy.component.ts 	modified:   src/app/pages/apps/apps.module.ts 	modified:   src/app/pages/apps/apps.routing.ts 	modified:   src/app/pages/apps/client-administraion/client-administraion.component.html 	modified:   src/app/pages/apps/client-administraion/client-administraion.component.ts 	new file:   src/app/pages/apps/groups/groups.component.html 	new file:   src/app/pages/apps/groups/groups.component.scss 	new file:   src/app/pages/apps/groups/groups.component.spec.ts 	new file:   src/app/pages/apps/groups/groups.component.ts 	new file:   src/app/pages/apps/groups/note.service.ts 	new file:   src/app/pages/apps/groups/note.ts 	new file:   src/app/pages/apps/groups/notes-data.ts 	new file:   src/app/pages/apps/listregclient/listregclient.component.html 	new file:   src/app/pages/apps/listregclient/listregclient.component.scss 	new file:   src/app/pages/apps/listregclient/listregclient.component.spec.ts 	new file:   src/app/pages/apps/listregclient/listregclient.component.ts 	modified:   src/app/pages/apps/manageunit/manageunit.component.scss 	modified:   src/app/pages/apps/manageunit/manageunit.component.ts 	modified:   src/app/pages/apps/policy-configuration/policy-configuration.component.html 	modified:   src/app/pages/apps/policy-configuration/policy-configuration.compo

--- a/src/app/components/dashboard1/our-visitors/our-visitors.component.html
+++ b/src/app/components/dashboard1/our-visitors/our-visitors.component.html
@@ -1,7 +1,7 @@
 <mat-card class="cardWithShadow">
   <mat-card-content class="p-24 m-b-24">
-    <mat-card-title>Our Visitors</mat-card-title>
-    <mat-card-subtitle>Different Devices Used to Visit</mat-card-subtitle>
+    <mat-card-title>Alert received Today</mat-card-title>
+    <!-- <mat-card-subtitle></mat-card-subtitle> -->
     <div id="visitor-chart" class="p-t-30 d-flex flex-column">
       <apx-chart
         [series]="ourvisitorChart.series"
@@ -23,15 +23,15 @@
     <div class="d-flex align-items-center justify-content-center gap-30">
         <div class="d-flex gap-12">
         <i-tabler name="circle-filled" class="text-accent icon-12 d-flex"></i-tabler>
-        <span class="mat-subtitle-2 text-accent">Tablet</span>
+        <span class="mat-subtitle-2 text-accent">ClampAv</span>
       </div>
       <div class="d-flex gap-12">
         <i-tabler name="circle-filled" class="text-primary icon-12 d-flex"></i-tabler>
-        <span class="mat-subtitle-2 text-primary">Mobile</span>
+        <span class="mat-subtitle-2 text-primary">SSH</span>
       </div>
       <div class="d-flex gap-12">
         <i-tabler name="circle-filled" class="text-gray-100 icon-12 d-flex"></i-tabler>
-        <span class="mat-subtitle-2 text-gray-100">Desktop</span>
+        <span class="mat-subtitle-2 text-gray-100">Inigrity</span>
       </div>
 
    
