--- a/src/app/components/dashboard1/sales-overview/sales-overview.component.html
+++ b/src/app/components/dashboard1/sales-overview/sales-overview.component.html
@@ -1,7 +1,7 @@
 <mat-card class="cardWithShadow">
   <mat-card-header>
-    <mat-card-title>Sales Overview</mat-card-title>
-    <mat-card-subtitle>Ample Admin Vs Pixel Admin</mat-card-subtitle>
+    <mat-card-title>Last 7 day's Status</mat-card-title>
+    <!-- <mat-card-subtitle>n</mat-card-subtitle> -->
   </mat-card-header>
   <mat-card-content class="p-b-24">
     <apx-chart
@@ -24,14 +24,14 @@
           name="circle-filled"
           class="text-primary icon-12 d-flex"
         ></i-tabler>
-        <span class="mat-subtitle-2 text-primary">Pixel</span>
+        <span class="mat-subtitle-2 text-primary">Rule pushed</span>
       </div>
       <div class="d-flex gap-12">
         <i-tabler
           name="circle-filled"
           class="text-accent icon-12 d-flex"
         ></i-tabler>
-        <span class="mat-subtitle-2 text-accent">Ample</span>
+        <span class="mat-subtitle-2 text-accent">Patch update</span>
       </div>
     </div>
   </mat-card-content>
