--- a/src/app/layouts/full/vertical/header/header.component.html
+++ b/src/app/layouts/full/vertical/header/header.component.html
@@ -37,7 +37,8 @@
   <span class="flex-1-auto"></span>
 
 
-  <p>{{userName}}</p>
+  <div></div>
+  <p style="color: white;">{{userName}}</p> &nbsp; &nbsp;  <p style="color: white;">( {{userType}} )</p>
 <!-- <img src="https://cdn-icons-png.flaticon.com/512/1053/1053210.png" alt="" style="height: 55px;" (click)="logout()"> -->
   <button (click)="logout()" style="background: transparent;
   border: none;
@@ -53,7 +54,7 @@ transform: scale(1.2);">
       <i-tabler name="logout" class="icon-20 d-flex"></i-tabler> 
     </mat-icon>
     <div>
-      logout
+      Logout
     </div></button>
 
   <!-- --------------------------------------------------------------- -->
