--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -49,7 +49,7 @@
       <app-sidebar> </app-sidebar>
       <ng-scrollbar
         class="position-relative mini-scroll"
-        style="height: calc(100vh - 230px)"
+        style="height: calc(100vh - 230px); margin-top: 20px;"
       >
         <mat-nav-list class="sidebar-list">
           <app-nav-item
