--- a/src/app/pages/apps/client-administraion/client-administraion.component.html
+++ b/src/app/pages/apps/client-administraion/client-administraion.component.html
@@ -1,68 +1,10 @@
-
 <!-- --------------------------------------------------------------------- -->
 <!-- card 1 -->
 <!-- --------------------------------------------------------------------- -->
 
-
-<!-- 
-<mat-card-content>
-  <div class="table-responsive m-t-30">
-    <table mat-table [dataSource]="dataSource1" class="w-100">
-
-
-      <ng-container matColumnDef="policyType">
-        <th
-          mat-header-cell
-          *matHeaderCellDef
-          class="f-w-600 mat-subtitle-1 f-s-14"
-        >
-          Policy type
-        </th>
-        <td mat-cell  *matCellDef="let element"  class="mat-body-1">
-          IP address
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="totalPolicy">
-        <th
-          mat-header-cell
-          *matHeaderCellDef
-          class="f-w-600 mat-subtitle-1 f-s-14"
-        >
-          Total policy
-        </th>
-        <td mat-cell *matCellDef="let element">
-         
-          {{ policySummary?.IP.total }}
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="activePolicy">
-        <th
-          mat-header-cell
-          *matHeaderCellDef
-          class="f-w-600 mat-subtitle-1 f-s-14"
-        >
-          Active policy
-        </th>
-        <td mat-cell *matCellDef="let element" class="mat-body-1">
-          {{ policySummary?.IP.addlist }}
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns1"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns1"></tr>
-    </table>
-  </div>
-</mat-card-content>
- -->
-
-
-
-<!-- 
 <div class="row">
-    <div class="col-lg-3 col-sm-6" *ngFor="let topcard of topcards">
-      <mat-card class="cardWithShadow text-center">
+  <div class="col-lg-3 col-sm-6">
+    <!-- <mat-card class="cardWithShadow text-center">
         <mat-card-content class="p-24">
           <div class="d-flex align-items-center">
             <span class="icon-56 bg-{{ topcard.color }} text-white rounded-circle d-flex align-items-center justify-content-center">
@@ -80,131 +22,139 @@
             </div>
           </div>
         </mat-card-content>
-      </mat-card>
-    </div>
-  </div> -->
-
-
-<!-- 
-  <div class="row">
-  <div class="col-lg-3 col-sm-6" *ngFor="let topcard of topcards">
-    <mat-card class="cardWithShadow text-center">
-      <mat-card-content class="p-24">
-        <div class="d-flex align-items-center">
-          <span
-            class="icon-56 bg-{{
-              topcard.color
-            }} text-white rounded-circle d-flex align-items-center justify-content-center"
-          >
-            <mat-icon class="f-s-24">{{ topcard.icon }}</mat-icon>
-          </span>
-          <div class="m-l-12 text-left">
-            <mat-card-title class="f-s-20 f-w-500">
-              {{ topcard.title }}
-            </mat-card-title>
-            <mat-card-subtitle class="m-t-4 f-s-14 f-w-400 m-t-8">
-              {{ topcard.subtitle }}
-            </mat-card-subtitle>
-          </div>
-        </div>
-      </mat-card-content>
-    </mat-card>
+      </mat-card> -->
   </div>
-</div> -->
+</div>
 
-
+<div style="margin-bottom: 70px"></div>
 
 <!-- --------------------------------------------------------------------- -->
 <!-- card 2 -->
 <!-- --------------------------------------------------------------------- -->
-<!-- <div class="row justify-content-center">
 
-    <div class="col-sm-6 col-lg-4">
-        <mat-card class="cardWithShadow card2 position-relative card-hover" style="cursor: pointer; min-height: 25vh;">
-            <mat-card-content class="p-y-24" style="margin: auto;">
-                <div style="display: flex; justify-content: center;">
-                    icon
+<!-- <div class="row py-2">
+    <div class="col-md-6"></div>
+    <div class="col-md-6"> </div>
+  </div>
+  
+  <div class="row py-2">
+    <div class="col-md-6"></div>
+    <div class="col-md-6"></div>
+  </div> -->
+<div class="row justify-content-center">
+  <div class="col-sm-6 col-lg-4">
+    <a routerLink="/apps/listregclient" routerLinkActive="router-link-active">
+      <mat-card
+        class="cardWithShadow card2 position-relative card-hover"
+        style="cursor: pointer; min-height: 25vh"
+      >
+        <mat-card-content class="p-y-24" style="margin: auto">
+          <div style="display: flex; justify-content: center">
+            <span
+              class="icon-56 bg-accent text-white rounded-circle d-flex align-items-center justify-content-center"
+            >
+              <mat-icon class="f-s-24">person</mat-icon>
+            </span>
+            <div style="margin-bottom: 70px"></div>
+          </div>
+          <mat-card-title style="display: flex; justify-content: center"
+            >List Of Registered Clients</mat-card-title
+          >
+        </mat-card-content>
+      </mat-card></a
+    >
+  </div>
 
+  <div class="col-sm-6 col-lg-4">
+    <a
+      routerLink="/apps/statusregclients"
+      routerLinkActive="router-link-active"
+    >
+      <mat-card
+        class="cardWithShadow card2 position-relative card-hover"
+        style="cursor: pointer; min-height: 25vh"
+      >
+        <mat-card-content class="p-y-24" style="margin: auto">
+          <div style="display: flex; justify-content: center">
+            <span
+              class="icon-56 bg-accent text-white rounded-circle d-flex align-items-center justify-content-center"
+            >
+              <mat-icon class="f-s-24">group_user</mat-icon>
+            </span>
+            <div style="margin-bottom: 70px"></div>
+          </div>
 
-                    <mat-icon>fingerprint</mat-icon>
+          <mat-card-title style="display: flex; justify-content: center"
+            >Registered Client's Status</mat-card-title
+          >
+        </mat-card-content>
+      </mat-card>
+    </a>
+  </div>
 
-                    <mat-icon role="img"
-                        class="mat-icon notranslate f-s-24 material-icons mat-ligature-font mat-icon-no-color"
-                        aria-hidden="true" data-mat-icon-type="font">local_mall</mat-icon>
+  <div class="col-sm-6 col-lg-4">
+    <mat-card
+      class="cardWithShadow card2 position-relative card-hover"
+      style="cursor: pointer; min-height: 25vh"
+    >
+      <mat-card-content class="p-y-24" style="margin: auto">
+        <div style="display: flex; justify-content: center">
+          <span
+            class="icon-56 bg-accent text-white rounded-circle d-flex align-items-center justify-content-center"
+          >
+            <mat-icon class="f-s-24">block</mat-icon>
+          </span>
+          <div style="margin-bottom: 70px"></div>
+        </div>
+        <mat-card-title style="display: flex; justify-content: center"
+          >Client Temporary Blocking</mat-card-title
+        >
+      </mat-card-content>
+    </mat-card>
+  </div>
 
-                </div>
-                <mat-card-title style="display: flex; justify-content: center;">List Of Registered
-                    Clients</mat-card-title>
-            </mat-card-content>
-        </mat-card>
-    </div>
+  <div class="col-sm-6 col-lg-4">
+    <mat-card
+      class="cardWithShadow card2 position-relative card-hover"
+      style="cursor: pointer; min-height: 25vh"
+    >
+      <mat-card-content class="p-y-24" style="margin: auto">
+        <div style="display: flex; justify-content: center">
+          <span
+            class="icon-56 bg-accent text-white rounded-circle d-flex align-items-center justify-content-center"
+          >
+            <mat-icon class="f-s-24">lock</mat-icon>
+          </span>
 
-    <div class="col-sm-6 col-lg-4">
-        <mat-card class="cardWithShadow card2 position-relative card-hover" style="cursor: pointer; min-height: 25vh;">
-            <mat-card-content class="p-y-24" style="margin: auto;">
-                <div style="display: flex; justify-content: center;">
-                    icon
+          <div style="margin-bottom: 70px"></div>
+        </div>
 
-                    <mat-icon>fingerprint</mat-icon>
+        <mat-card-title style="display: flex; justify-content: center"
+          >List Of Blocked Client</mat-card-title
+        >
+      </mat-card-content>
+    </mat-card>
+  </div>
 
-                </div>
-                <mat-card-title style="display: flex; justify-content: center;">Registered Client's
-                    Status</mat-card-title>
-            </mat-card-content>
-        </mat-card>
-    </div>
+  <div class="col-sm-6 col-lg-4">
+    <mat-card
+      class="cardWithShadow card2 position-relative card-hover"
+      style="cursor: pointer; min-height: 25vh"
+    >
+      <mat-card-content class="p-y-24" style="margin: auto">
+        <div style="display: flex; justify-content: center">
+          <span
+            class="icon-56 bg-accent text-white rounded-circle d-flex align-items-center justify-content-center"
+          >
+            <mat-icon class="f-s-24">list</mat-icon>
+          </span>
 
-    <div class="col-sm-6 col-lg-4">
-        <mat-card class="cardWithShadow card2 position-relative card-hover" style="cursor: pointer; min-height: 25vh;">
-            <mat-card-content class="p-y-24" style="margin: auto;">
-                <div style="display: flex; justify-content: center;">
-                    icon
-
-                    <span
-                        class="icon-56 bg-accent text-white rounded-circle d-flex align-items-center justify-content-center">
-                        <mat-icon class="f-s-24">stars</mat-icon>
-                    </span>
-
-
-                </div>
-                <mat-card-title style="display: flex; justify-content: center;">Client Temporary
-                    Blocking</mat-card-title>
-            </mat-card-content>
-        </mat-card>
-    </div>
-
-
-    <div class="col-sm-6 col-lg-4">
-        <mat-card class="cardWithShadow card2 position-relative card-hover" style="cursor: pointer; min-height: 25vh;">
-            <mat-card-content class="p-y-24" style="margin: auto;">
-                <div style="display: flex; justify-content: center;">
-                    icon
-
-                    <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon>
-
-                    
-                </div>
-                <mat-card-title style="display: flex; justify-content: center;">List Of Blocking Client</mat-card-title>
-            </mat-card-content>
-        </mat-card>
-    </div>
-
-
-    <div class="col-sm-6 col-lg-4">
-        <mat-card class="cardWithShadow card2 position-relative card-hover" style="cursor: pointer; min-height: 25vh;">
-            <mat-card-content class="p-y-24" style="margin: auto;">
-                <div style="display: flex; justify-content: center;">
-                    icon
-
-                    <i class="ti ti-address-book"></i>
-                </div>
-                <mat-card-title style="display: flex; justify-content: center;">List Of Deleted Client</mat-card-title>
-            </mat-card-content>
-        </mat-card>
-    </div>
-
-
+          <div style="margin-bottom: 70px"></div>
+        </div>
+        <mat-card-title style="display: flex; justify-content: center"
+          >List Of Deleted Client</mat-card-title
+        >
+      </mat-card-content>
+    </mat-card>
+  </div>
 </div>
-
-<hr>
-<br> -->
