1. policy update 	modified:   src/app/pages/apps/apps.routing.ts 	modified:   src/app/pages/apps/groups/groups.component.html 	modified:   src/app/pages/apps/groups/groups.component.ts 	modified:   src/app/pages/apps/localadmin/localadmin.component.html 	modified:   src/app/pages/apps/policy-update/policy-update.component.html 	modified:   src/app/pages/apps/policy-update/policy-update.component.scss 	modified:   src/app/pages/apps/policy-update/policy-update.component.ts 	modified:   src/app/pages/apps/regstatusclient/regstatusclient.component.html 	modified:   src/app/services/common-services.service.ts

--- a/src/app/pages/apps/regstatusclient/regstatusclient.component.html
+++ b/src/app/pages/apps/regstatusclient/regstatusclient.component.html
@@ -26,7 +26,7 @@
         <mat-table [dataSource]="dataSources" matSort  >
           <ng-container matColumnDef="ID">
         <mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 mat-subtitle-1 f-s-16 p-l-0">
-          ID
+          Gen ID
         </mat-header-cell>
         <mat-cell *matCellDef="let row" class="p-l-0">
           <div class="d-flex align-items-center gap-12 p-x-8 p-y-16">
