--- a/src/app/pages/apps/localadmin/localadmin.component.html
+++ b/src/app/pages/apps/localadmin/localadmin.component.html
@@ -9,7 +9,7 @@
   <mat-card class="cardWithShadow">
     <mat-tab-group animationDuration="0ms">
       <!-- Tab 1 -->
-      <mat-tab label="Create local admin">
+      <mat-tab label="Create Local Admin">
         <mat-card-content class="p-24">
 
           <form class="m-t-24" [formGroup]="secondFormGroup">
@@ -18,7 +18,7 @@
     
           
               <div class="col-lg-6">
-                <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block">Unit name</mat-label>
+                <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block">Unit Name</mat-label>
                 <mat-form-field appearance="outline" class="w-100" color="primary">
                   <mat-select placeholder="Select" formControlName="unitid" required>
 
@@ -67,7 +67,7 @@
                 <!-- input -->
                 <div style="display: flex;">
     
-                  <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block">User name</mat-label>
+                  <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block">User Name</mat-label>
                    <span style="font-size: 0.7rem; margin-left: 10px; color: gray; align-items: end; display: flex;">* Maximum 10 characters</span>
                 </div>
                 <mat-form-field appearance="outline" class="w-100" color="primary">
@@ -90,7 +90,7 @@
                 <!-- input -->
               
     
-                  <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block">E-mail</mat-label>
+                  <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block">E-Mail</mat-label>
                  
             
                 <mat-form-field appearance="outline" class="w-100" color="primary">
