--- a/src/app/pages/apps/policy-update/policy-update.component.html
+++ b/src/app/pages/apps/policy-update/policy-update.component.html
@@ -5,20 +5,19 @@
     <mat-tab label="URL" style="font-size: 20px !important;">
       <mat-card-content class="p-24">
 
-        <div class="row m-t-20" style="min-height: 50vh;">
-          <div class="col-lg-5 col-sm-5" style="border: 1px solid red;">
+        <div class="row m-t-20" style="min-height: 30vh;">
+          <div class="col-lg-3 col-sm-5">
             <div>
-              <!-- search -->
-              <!-- <input type="text"> -->
-
+              <h2>Blocked urls</h2>
               <mat-form-field appearance="outline" class="w-100" color="primary">
-                <input matInput type="text" placeholder="Search here" [(ngModel)]="searchText" (input)="applyFilter()" />
-                <mat-icon matSuffix style="cursor: pointer;">
-                  <i-tabler name="search" class="icon-20 d-flex"></i-tabler>
+                <input matInput type="text" placeholder="Search blocked url" [(ngModel)]="searchText" />
+                <mat-icon matSuffix style="cursor: pointer; background-color: #f7c878; border-radius: 0.5rem;"
+                  (click)="searchAllowedUrl()">
+                  <i-tabler name="search" class="icon-20 d-flex searchIcon"></i-tabler>
                 </mat-icon>
               </mat-form-field>
               <!-- Checkbox list for allowed URLs -->
-              <div style="background-color: bisque; height: 50vh; overflow: auto;">
+              <div style="background-color: #fff8ec; height: 40vh; overflow: auto; padding: 10px;">
                 <div *ngFor="let item of filteredAllowedUrl">
                   <label>
                     <input type="checkbox" [value]="item" (change)="onCheckboxChange($event, item, 'allowed')" />
@@ -26,34 +25,43 @@
                   </label>
                 </div>
               </div>
-
-
             </div>
+          </div>
 
+
+          <div class="col-lg-1 col-sm-2"
+            style=" display: flex; justify-content: center; align-items: center; flex-direction: column;">
+
+            <button mat-stroked-button color="accent" type="button" (click)="moveToBlocked()"
+              style="transform: scale(1.2);">
+              <mat-icon style="margin: 0;  transform: scale(1.4);">
+                <i-tabler name="arrow-big-right-filled" class="icon-20 d-flex searchIcon"></i-tabler>
+              </mat-icon>
+            </button>
+            <button mat-stroked-button color="warn" type="button" (click)="moveToAllowed()"
+              style="margin-top: 20px;transform: scale(1.2);">
+              <mat-icon style="margin: 0; transform: scale(1.4);">
+                <i-tabler name="arrow-big-left-filled" class="icon-20 d-flex searchIcon"></i-tabler>
+              </mat-icon>
+            </button>
 
           </div>
 
 
-          <div class="col-lg-2 col-sm-2"
-            style="border: 1px solid black; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-            <!-- <button style="margin-bottom: 10px;">1</button>
-            <button>2</button> -->
-            <button mat-stroked-button color="warn" type="button" (click)="moveToBlocked()">moveToBlocked</button>
-            <button mat-stroked-button color="accent" type="button"  (click)="moveToAllowed()"> moveToAllowed</button>
+          <div class=" col-lg-3 col-sm-5" style="margin-bottom: 10px;">
 
-          </div>
+            <h2>Allowed urls</h2>
 
-
-          <div class=" col-lg-5 col-sm-5" style="border: 1px solid pink;">
             <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput type="text" placeholder="Search here" [(ngModel)]="blockedSearchText" (input)="applyBlockedFilter()" />
-              <mat-icon matSuffix style="cursor: pointer;">
-                <i-tabler name="search" class="icon-20 d-flex"></i-tabler>
+              <input matInput type="text" placeholder="Search allowed url" [(ngModel)]="blockedSearchText" />
+              <mat-icon matSuffix style="cursor: pointer; background-color: #f7c878; border-radius: 0.5rem;"
+                (click)="applyBlockedFilter()">
+                <i-tabler name="search" class="icon-20 d-flex searchIcon"></i-tabler>
               </mat-icon>
             </mat-form-field>
 
             <!-- Checkbox list for blocked URLs -->
-            <div style="background-color: bisque; height: 50vh; overflow: auto;">
+            <div style="background-color: #fff8ec; height: 40vh; overflow: auto; padding: 10px;">
               <div *ngFor="let item of filteredBlockedUrl">
                 <label>
                   <input type="checkbox" [value]="item" (change)="onCheckboxChange($event, item, 'blocked')" />
@@ -63,10 +71,101 @@
             </div>
           </div>
 
+          <div style=" width: 400px; margin: 0 auto;">
+
+
+            <div
+              style=" height: 28vh; overflow: auto; padding: 10px;border-radius: 1.2rem; box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2); padding-top: 12px;background-color: #e8fdf8; ">
+
+              <div *ngIf="submitchanges.length > 0">
+
+                <div style="display: flex; justify-content: center;">
+
+                  <p style="font-weight: bold; text-align: center;">Allowed URL</p>
+                  <p>(*Following Urls will be allowed)</p>
+                </div>
+
+                <table>
+                  <thead>
+                    <tr>
+                      <th style="width: 86%;">URL</th>
+                      <th>Action</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <ng-container *ngFor="let item of submitchanges">
+                      <ng-container *ngIf="item.status === 1">
+                        <tr>
+                          <td>{{ item.value }}</td>
+                          <td>
+                            <button class="bg-error f-s-12 p-x-8 p-y-4 rounded text-white"
+                              style="border: none; cursor: pointer;" type="button"
+                              (click)="deleteItem(item)">Delete</button>
+                          </td>
+                        </tr>
+                      </ng-container>
+                    </ng-container>
+                    <tr *ngIf="submitchanges.length === 0">
+                      <td colspan="2">No data present.</td>
+                    </tr>
+                  </tbody>
+                </table>
+
+              </div>
+              <div *ngIf="submitchanges.length === 0">
+                <p>No allowed url added</p>
+              </div>
+            </div>
+
+            <div
+              style=" height: 28vh; overflow: auto; padding: 10px;border-radius: 1.2rem; box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2); padding-top: 12px; margin-top: 20px; background-color: #f9e7eb;">
+
+              <div *ngIf="submitchanges.length > 0">
+
+                <div style="display: flex; justify-content: center;">
+
+                  <p style="font-weight: bold;">Blocked URL</p>
+                  <p>(*Following Urls will be blocked)</p>
+                </div>
+                <table>
+                  <thead>
+                    <tr>
+                      <th style="width: 86%;">URL</th>
+                      <th>Action</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <ng-container *ngFor="let item of submitchanges">
+                      <ng-container *ngIf="item.status === 0">
+                        <tr>
+                          <td>{{ item.value }}</td>
+                          <td>
+                            <button class="bg-error f-s-12 p-x-8 p-y-4 rounded text-white"
+                              style="border: none; cursor: pointer;" type="button"
+                              (click)="deleteItem(item)">Delete</button>
+                          </td>
+                        </tr>
+                      </ng-container>
+                    </ng-container>
+                    <tr *ngIf="submitchanges.length === 0">
+                      <td colspan="2">No data present.</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <div *ngIf="submitchanges.length === 0">
+                <p>No bolcked url added</p>
+              </div>
+            </div>
+          </div>
 
         </div>
 
-        <button>submit</button>
+        <div style="display: flex; justify-content: center;">
+          <button mat-flat-button color="primary" type="button" (click)="urlUpdate()"
+            [disabled]="submitchanges.length == 0">submit</button>
+        </div>
+
 
       </mat-card-content>
     </mat-tab>
@@ -76,39 +175,167 @@
     <mat-tab label="IP">
       <mat-card-content class="p-24">
 
+      
+        <div class="row m-t-20" style="min-height: 30vh;">
+          <div class="col-lg-3 col-sm-5">
+            <div>
+              <h2>Blocked IPs</h2>
+              <mat-form-field appearance="outline" class="w-100" color="primary">
+                <input matInput type="text" placeholder="Search blocked ip" [(ngModel)]="searchTextForAllowedIPs" />
+                <mat-icon matSuffix style="cursor: pointer; background-color: #f7c878; border-radius: 0.5rem;"
+                  (click)="searchAllowedIP()">
+                  <i-tabler name="search" class="icon-20 d-flex searchIcon"></i-tabler>
+                </mat-icon>
+              </mat-form-field>
+              <!-- Checkbox list for allowed URLs -->
+              <div style="background-color: #fff8ec; height: 40vh; overflow: auto; padding: 10px;">
+                <div *ngFor="let item of filteredAllowedIPs">
+                  <label>
+                    <input type="checkbox" [value]="item" (change)="onCheckboxChangeIp($event, item, 'allowed')" />
+                    {{ item }}
+                  </label>
+                </div>
+              </div>
+            </div>
+          </div>
 
-        <!-- <table datatable dtOptions="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover"></table> -->
-        <div *ngIf="showEventTable">
-          <h1>Added IP</h1>
-          <table datatable [dtOptions]="dtOptions" class="row-border hover">
-            <thead>
-              <tr>
-                <th>URL</th>
-                <th>Created On</th>
 
-                <th>Action</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let item of data; let i = index">
-                <td>{{ i + 1 }}</td>
-                <td>{{ item.unitName }}</td>
-                <td>
-                  <button class="bg-error f-s-12 p-x-8 p-y-4 rounded text-white"
-                    style="border: none; cursor: pointer;">Delete</button>
-                </td>
-              </tr>
+          <div class="col-lg-1 col-sm-2"
+            style=" display: flex; justify-content: center; align-items: center; flex-direction: column;">
 
-            </tbody>
-          </table>
+            <button mat-stroked-button color="accent" type="button" (click)="moveToBlockedIp()"
+              style="transform: scale(1.2);">
+              <mat-icon style="margin: 0;  transform: scale(1.4);">
+                <i-tabler name="arrow-big-right-filled" class="icon-20 d-flex searchIcon"></i-tabler>
+              </mat-icon>
+            </button>
+            <button mat-stroked-button color="warn" type="button" (click)="moveToAllowedIp()"
+              style="margin-top: 20px;transform: scale(1.2);">
+              <mat-icon style="margin: 0; transform: scale(1.4);">
+                <i-tabler name="arrow-big-left-filled" class="icon-20 d-flex searchIcon"></i-tabler>
+              </mat-icon>
+            </button>
+
+          </div>
+
+
+          <div class=" col-lg-3 col-sm-5" style="margin-bottom: 10px;">
+
+            <h2>Allowed Ips</h2>
+
+            <mat-form-field appearance="outline" class="w-100" color="primary">
+              <input matInput type="text" placeholder="Search allowed ip" [(ngModel)]="searchTextForBlockedIPs" />
+              <mat-icon matSuffix style="cursor: pointer; background-color: #f7c878; border-radius: 0.5rem;"
+                (click)="applyBlockedIPFilter()">
+                <i-tabler name="search" class="icon-20 d-flex searchIcon"></i-tabler>
+              </mat-icon>
+            </mat-form-field>
+
+            <!-- Checkbox list for blocked URLs -->
+            <div style="background-color: #fff8ec; height: 40vh; overflow: auto; padding: 10px;">
+              <div *ngFor="let item of filteredBlockedIPs">
+                <label>
+                  <input type="checkbox" [value]="item" (change)="onCheckboxChangeIp($event, item, 'blocked')" />
+                  {{ item }}
+                </label>
+              </div>
+            </div>
+          </div>
+
+          <div style=" width: 400px; margin: 0 auto;">
+
+
+            <div
+              style=" height: 28vh; overflow: auto; padding: 10px;border-radius: 1.2rem; box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2); padding-top: 12px;background-color: #e8fdf8; ">
+
+              <div *ngIf="submitchanges.length > 0">
+
+                <div style="display: flex; justify-content: center;">
+
+                  <p style="font-weight: bold; text-align: center;">Allowed IP</p>
+                  <p>(*Following IP will be allowed)</p>
+                </div>
+
+                <table>
+                  <thead>
+                    <tr>
+                      <th style="width: 86%;">IP</th>
+                      <th>Action</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <ng-container *ngFor="let item of submitchanges">
+                      <ng-container *ngIf="item.status === 1">
+                        <tr>
+                          <td>{{ item.value }}</td>
+                          <td>
+                            <button class="bg-error f-s-12 p-x-8 p-y-4 rounded text-white"
+                              style="border: none; cursor: pointer;" type="button"
+                              (click)="deleteIPItem(item)">Delete</button>
+                          </td>
+                        </tr>
+                      </ng-container>
+                    </ng-container>
+                    <tr *ngIf="submitchanges.length === 0">
+                      <td colspan="2">No data present.</td>
+                    </tr>
+                  </tbody>
+                </table>
+
+              </div>
+              <div *ngIf="submitchanges.length === 0">
+                <p>No allowed ip added</p>
+              </div>
+            </div>
+
+            <div
+              style=" height: 28vh; overflow: auto; padding: 10px;border-radius: 1.2rem; box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2); padding-top: 12px; margin-top: 20px; background-color: #f9e7eb;">
+
+              <div *ngIf="submitchanges.length > 0">
+
+                <div style="display: flex; justify-content: center;">
+
+                  <p style="font-weight: bold;">Blocked IP</p>
+                  <p>(*Following IP will be blocked)</p>
+                </div>
+                <table>
+                  <thead>
+                    <tr>
+                      <th style="width: 86%;">IP</th>
+                      <th>Action</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <ng-container *ngFor="let item of submitchanges">
+                      <ng-container *ngIf="item.status === 0">
+                        <tr>
+                          <td>{{ item.value }}</td>
+                          <td>
+                            <button class="bg-error f-s-12 p-x-8 p-y-4 rounded text-white"
+                              style="border: none; cursor: pointer;" type="button"
+                              (click)="deleteIPItem(item)">Delete</button>
+                          </td>
+                        </tr>
+                      </ng-container>
+                    </ng-container>
+                    <tr *ngIf="submitchanges.length === 0">
+                      <td colspan="2">No data present.</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <div *ngIf="submitchanges.length === 0">
+                <p>No bolcked ip added</p>
+              </div>
+            </div>
+          </div>
+
         </div>
 
-
-
-
-
-
-        <!-- ============================================================================================================== -->
+        <div style="display: flex; justify-content: center;">
+          <button mat-flat-button color="primary" type="button" (click)="ipUpdate()"
+            [disabled]="submitchanges.length == 0">submit</button>
+        </div>
 
 
       </mat-card-content>
