--- a/src/app/pages/apps/policy-update/policy-update.component.scss
+++ b/src/app/pages/apps/policy-update/policy-update.component.scss
@@ -2,6 +2,10 @@
 .mat-icon:hover {
     // background-color: black;
     // color: white;
-    transform: scale(2);
+    // transform: scale(2);
   }
   
+  .searchIcon:hover{
+    transform: scale(1.3);
+
+  }
