1. authentication updated 2. group updated 	modified:   src/app/app-routing.module.ts 	modified:   src/app/interceptor/auth.interceptor.ts 	modified:   src/app/layouts/full/vertical/sidebar/sidebar-data.ts 	modified:   src/app/pages/apps/apps.routing.ts 	modified:   src/app/pages/apps/generateotp/generateotp.component.html 	modified:   src/app/pages/apps/generateotp/generateotp.component.ts 	modified:   src/app/pages/apps/groups/groups.component.html 	modified:   src/app/pages/apps/groups/groups.component.scss 	modified:   src/app/pages/apps/groups/groups.component.ts 	modified:   src/app/pages/apps/listregclient/listregclient.component.html 	modified:   src/app/pages/apps/localadmin/localadmin.component.html 	modified:   src/app/pages/apps/localadmin/localadmin.component.ts 	modified:   src/app/pages/apps/manageunit/manageunit.component.html 	modified:   src/app/pages/apps/manageunit/manageunit.component.scss 	modified:   src/app/pages/apps/manageunit/manageunit.component.ts 	modified:   src/app/pages/apps/policy-configuration/policy-configuration.component.html 	modified:   src/app/pages/apps/policy-configuration/policy-configuration.component.scss 	modified:   src/app/pages/apps/policy-configuration/policy-configuration.component.ts 	modified:   src/app/pages/apps/policy-update/policy-update.component.html 	modified:   src/app/pages/apps/policy-update/policy-update.component.ts 	modified:   src/app/pages/authentication/boxed-login/boxed-login.component.ts 	new file:   src/app/services/auth.guard.spec.ts 	new file:   src/app/services/auth.guard.ts 	modified:   src/app/services/common-services.service.ts 	modified:   src/styles.scss

--- a/src/app/pages/apps/generateotp/generateotp.component.html
+++ b/src/app/pages/apps/generateotp/generateotp.component.html
@@ -15,7 +15,7 @@
           </div>
     
           <mat-form-field appearance="outline" class="w-100" color="primary">
-            <input matInput type="text" formControlName="user_name" placeholder="Username" required />
+            <input matInput type="text" formControlName="user_name" placeholder="Enter User Name" required />
             <mat-icon matPrefix>
               <i-tabler name="user" class="icon-20 d-flex"></i-tabler>
             </mat-icon>
@@ -38,7 +38,7 @@
           </div>
     
           <mat-form-field appearance="outline" class="w-100" color="primary">
-            <input matInput type="tel" formControlName="contact_number" placeholder="Contact Number" required />
+            <input matInput type="tel" formControlName="contact_number" placeholder="Enter Contact Number" required />
     
             <mat-icon matPrefix>
               <i-tabler name="phone" class="icon-20 d-flex"></i-tabler>
@@ -65,7 +65,7 @@
           </div>
     
           <mat-form-field appearance="outline" class="w-100" color="primary">
-            <input matInput type="text" formControlName="designation" placeholder="Designation" required />
+            <input matInput type="text" formControlName="designation" placeholder="Enter Designation" required />
             <mat-icon matPrefix>
               <i-tabler name="notebook" class="icon-20 d-flex"></i-tabler>
             </mat-icon>
@@ -87,7 +87,7 @@
           </div>
     
           <mat-form-field appearance="outline" class="w-100" color="primary">
-            <input matInput type="text" formControlName="rank" placeholder="Rank" required />
+            <input matInput type="text" formControlName="rank" placeholder="Enter Rank" required />
             <mat-icon matPrefix>
               <i-tabler name="star" class="icon-20 d-flex"></i-tabler>
             </mat-icon>
