--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,11 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+/* ATab header font size*/
+.mat-mdc-tab-header {
+    --mat-tab-header-label-text-size: 20px !important;
+  }
+
+  
