--- a/src/app/pages/apps/manageunit/manageunit.component.html
+++ b/src/app/pages/apps/manageunit/manageunit.component.html
@@ -40,7 +40,7 @@
                 </div>
 
                   <mat-form-field appearance="outline" class="w-100">
-                    <input matInput formControlName="unitname" required placeholder="Enter unit name" />
+                    <input matInput formControlName="unitname" required placeholder="Enter Unit Name" />
                     <mat-icon matPrefix>
                       <i-tabler name="users" class="icon-20 d-flex"></i-tabler>
                     </mat-icon>
@@ -91,7 +91,7 @@
             </div>
             <mat-form-field appearance="outline" class="w-100 custom-form-field">
               <textarea matInput formControlName="unitdesc" rows="5" required
-                placeholder="Enter unit description"></textarea>
+                placeholder="Enter Unit Description"></textarea>
 
               <mat-icon matPrefix>
                 <i-tabler name="notebook" class="icon-20 d-flex"></i-tabler>
@@ -131,7 +131,7 @@
         <!-- <table datatable dtOptions="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover"></table> -->
         <div *ngIf="showEventTable">
 
-          <table datatable [dtOptions]="dtOptions" class="row-border hover">
+          <!-- <table datatable [dtOptions]="dtOptions" class="row-border hover">
             <thead>
               <tr>
                 <th>Sr No</th>
@@ -150,17 +150,70 @@
                 <td>{{ item?.created_on }}</td>
                 <td>{{ item?.parent_unit }}</td>
                 <td>
-                  <!-- <Button>Edit</Button>  
-                  <button>Delete</button> -->
                   <button class="bg-success f-s-12 p-x-8 p-y-4 rounded text-white" style="border: none; cursor: pointer;" (click)="editRow()">Edit</button> &nbsp; &nbsp;
-
                   <button class="bg-error f-s-12 p-x-8 p-y-4 rounded text-white" style="border: none; cursor: pointer;"  (click)="deleteRow()">Delete</button>
-
                 </td>
+              </tr>
+            </tbody>
+          </table> -->
 
+
+          <table datatable [dtOptions]="dtOptions" class="row-border hover">
+            <thead>
+              <tr>
+                <th>Sr No</th>
+                <th>Unit Name</th>
+                <th>Unit Desc</th>
+                <th>Created On</th>
+                <th>Parent Unit</th>
+                <th>Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let item of manageUnitDetails; let i = index">
+                <td>{{ i + 1 }}</td>
+                <td>
+                  <ng-container *ngIf="!editMode[i]; else editModeTemplate">
+                    {{ item.unit_name }}
+                  </ng-container>
+                  <ng-template #editModeTemplate>
+                    <input type="text" [(ngModel)]="item.unit_name" />
+                  </ng-template>
+                </td>
+                <td>
+                  <ng-container *ngIf="!editMode[i]; else editModeDescTemplate">
+                    {{ item.unit_desc }}
+                  </ng-container>
+                  <ng-template #editModeDescTemplate>
+                    <input type="text" [(ngModel)]="item.unit_desc" />
+                  </ng-template>
+                </td>
+                <td>{{ item.created_on }}</td>
+                <td>{{ item.parent_unit }}</td>
+                <td>
+                  <button class="bg-success f-s-12 p-x-8 p-y-4 rounded text-white"
+                          style="border: none; cursor: pointer;"
+                          (click)="editRow(i)">
+                    {{ editMode[i] ? 'Cancel' : 'Edit' }}
+                  </button>
+                  <!-- <button class="bg-error f-s-12 p-x-8 p-y-4 rounded text-white"
+                          style="border: none; cursor: pointer;"
+                          (click)="deleteRow(i)">
+                    Delete
+                  </button> -->
+                  <button *ngIf="editMode[i]"
+                          class="bg-primary f-s-12 p-x-8 p-y-4 rounded text-white"
+                          style="border: none; cursor: pointer;"
+                          (click)="saveChanges(i)">
+                    Save
+                  </button>
+                </td>
               </tr>
             </tbody>
           </table>
+          
+
+
         </div>
 
 
