--- a/src/app/pages/apps/policy-update/policy-update.component.html
+++ b/src/app/pages/apps/policy-update/policy-update.component.html
@@ -17,7 +17,7 @@
                 </mat-icon>
               </mat-form-field>
               <!-- Checkbox list for allowed URLs -->
-              <div style="background-color: #fff8ec; height: 40vh; overflow: auto; padding: 10px;">
+              <div style="background-color: #fff8ec; height: 40vh; overflow: auto; padding: 10px; border-radius: 1.2rem; box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);">
                 <div *ngFor="let item of filteredAllowedUrl">
                   <label>
                     <input type="checkbox" [value]="item" (change)="onCheckboxChange($event, item, 'allowed')" />
@@ -61,7 +61,7 @@
             </mat-form-field>
 
             <!-- Checkbox list for blocked URLs -->
-            <div style="background-color: #fff8ec; height: 40vh; overflow: auto; padding: 10px;">
+            <div style="background-color: #fff8ec; height: 40vh; overflow: auto; padding: 10px; border-radius: 1.2rem; box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);">
               <div *ngFor="let item of filteredBlockedUrl">
                 <label>
                   <input type="checkbox" [value]="item" (change)="onCheckboxChange($event, item, 'blocked')" />
@@ -188,7 +188,7 @@
                 </mat-icon>
               </mat-form-field>
               <!-- Checkbox list for allowed URLs -->
-              <div style="background-color: #fff8ec; height: 40vh; overflow: auto; padding: 10px;">
+              <div style="background-color: #fff8ec; height: 40vh; overflow: auto; padding: 10px; border-radius: 1.2rem; box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);">
                 <div *ngFor="let item of filteredAllowedIPs">
                   <label>
                     <input type="checkbox" [value]="item" (change)="onCheckboxChangeIp($event, item, 'allowed')" />
@@ -221,7 +221,7 @@
 
           <div class=" col-lg-3 col-sm-5" style="margin-bottom: 10px;">
 
-            <h2>Allowed Ips</h2>
+            <h2>Allowed IPs</h2>
 
             <mat-form-field appearance="outline" class="w-100" color="primary">
               <input matInput type="text" placeholder="Search allowed ip" [(ngModel)]="searchTextForBlockedIPs" />
@@ -232,7 +232,7 @@
             </mat-form-field>
 
             <!-- Checkbox list for blocked URLs -->
-            <div style="background-color: #fff8ec; height: 40vh; overflow: auto; padding: 10px;">
+            <div style="background-color: #fff8ec; height: 40vh;overflow-y: scroll; padding: 10px; border-radius: 1.2rem; box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);">
               <div *ngFor="let item of filteredBlockedIPs">
                 <label>
                   <input type="checkbox" [value]="item" (change)="onCheckboxChangeIp($event, item, 'blocked')" />
