1. Policy updated 2. side nav bar updated 	modified:   src/app/interceptor/auth.interceptor.ts 	modified:   src/app/layouts/full/full.component.html 	modified:   src/app/layouts/full/full.component.ts 	modified:   src/app/layouts/full/vertical/header/header.component.html 	modified:   src/app/layouts/full/vertical/header/header.component.ts 	modified:   src/app/layouts/full/vertical/sidebar/sidebar-data.ts 	modified:   src/app/pages/apps/groups/groups.component.html 	modified:   src/app/pages/apps/groups/groups.component.ts 	modified:   src/app/pages/apps/localadmin/localadmin.component.html 	modified:   src/app/pages/apps/localadmin/localadmin.component.ts 	modified:   src/app/pages/apps/manageunit/manageunit.component.html 	modified:   src/app/pages/apps/manageunit/manageunit.component.scss 	modified:   src/app/pages/apps/policy-configuration/policy-configuration.component.html 	modified:   src/app/pages/apps/policy-configuration/policy-configuration.component.ts 	modified:   src/app/pages/apps/policy-update/policy-update.component.ts 	modified:   src/app/pages/authentication/boxed-login/boxed-login.component.html 	modified:   src/app/pages/authentication/boxed-login/boxed-login.component.ts 	modified:   src/app/pages/dashboards/dashboards.routing.ts 	modified:   src/app/services/common-services.service.ts 	modified:   src/assets/scss/layouts/_sidebar.scss 	modified:   src/styles.scss

--- a/src/app/pages/apps/localadmin/localadmin.component.html
+++ b/src/app/pages/apps/localadmin/localadmin.component.html
@@ -1,11 +1,4 @@
 
-  
-  
-  <!-- ======================================================================== -->
-
-
-  
-
   <mat-card class="cardWithShadow">
     <mat-tab-group animationDuration="0ms">
       <!-- Tab 1 -->
@@ -179,7 +172,7 @@
     
               <div class="row m-t-20">
               <!-- <mat-card-actions class="b-t-1"> -->
-                <button mat-flat-button color="primary" (click)="submit('create')">Create Login</button>
+                <button mat-flat-button color="primary" (click)="submit('create')" [disabled]="secondFormGroup.invalid">Create Login</button>
                 <button mat-flat-button color="warn" type="reset" class="m-l-8">Reset</button>
   
     
@@ -201,9 +194,9 @@
     </mat-tab-group>
   </mat-card>
 
-  <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="ball-clip-rotate" [fullScreen]="true">
+  <!-- <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="ball-clip-rotate" [fullScreen]="true">
     <p class="text-white"> {{ loaderStatus }} </p>
-  </ngx-spinner>
+  </ngx-spinner> -->
 
 
   
