--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -46,18 +46,21 @@
       (closedStart)="onSidenavClosedStart()"
       class="sidebarNav"
     >
-      <app-sidebar> </app-sidebar>
+      <!-- <app-sidebar> </app-sidebar> -->
       <ng-scrollbar
         class="position-relative mini-scroll"
         style="height: calc(100vh - 230px); margin-top: 20px;"
       >
         <mat-nav-list class="sidebar-list">
-          <app-nav-item
-            *ngFor="let item of navItems"
-            [item]="item"
-            (notify)="sidenav.toggle()"
-          >
-          </app-nav-item>
+         
+
+            <app-nav-item
+              *ngFor="let item of filteredNavItems"
+              [item]="item"
+              (notify)="sidenav.toggle()"
+            >
+            </app-nav-item>
+         
         </mat-nav-list>
       </ng-scrollbar>
     </mat-sidenav>
