--- a/src/app/layouts/full/vertical/header/header.component.html
+++ b/src/app/layouts/full/vertical/header/header.component.html
@@ -26,13 +26,13 @@
   <!-- --------------------------------------------------------------- -->
   <!--  Search -->
   <!-- --------------------------------------------------------------- -->
-  <button
+  <!-- <button
     mat-icon-button
     (click)="openDialog()"
     class="d-flex justify-content-center"
   >
     <i-tabler name="search" class="icon-20 d-flex"></i-tabler>
-  </button>
+  </button> -->
 
   <span class="flex-1-auto"></span>
 
