--- a/src/app/pages/apps/manageunit/manageunit.component.scss
+++ b/src/app/pages/apps/manageunit/manageunit.component.scss
@@ -39,24 +39,24 @@
 //   // --mat-tab-header-label-text-weight: 400;
 // }
 
-::ng-deep .mat-tab-label {
-  font-style: italic !important; /* You can use other values like 'normal' or 'oblique' */
-}
-::ng-deep .mat-tab-label .mat-tab-label-content {
-  font-size: x-large;
-}
+// ::ng-deep .mat-tab-label {
+//   font-style: italic !important; /* You can use other values like 'normal' or 'oblique' */
+// }
+// ::ng-deep .mat-tab-label .mat-tab-label-content {
+//   font-size: x-large;
+// }
 
-.aaa span {
-  font-size: 30px !important;
-  background-color: green !important;
-}
+// .aaa span {
+//   font-size: 30px !important;
+//   background-color: green !important;
+// }
 
 
-.content { 
-  .mat-tab-label{
-    font-size: 30px !important;
-  } 
-}
+// .content { 
+//   .mat-tab-label{
+//     font-size: 30px !important;
+//   } 
+// }
 
 // .mat-tab-label{
 //   font-size: 20px !important;
@@ -82,11 +82,13 @@
 
 
 
-.mdc-tab--active {
-  background-color: #dcecfb;
+// .mdc-tab--active {
+//   background-color: #dcecfb !important;
+// }
+
+::ng-deep .mat-tab-label-active {
+  background-color: red !important;
 }
-
-
 
 // .md-tabs > .md-tabs-wrapper {
 //   background-color: #f00 !important;
