--- a/src/app/pages/authentication/boxed-login/boxed-login.component.html
+++ b/src/app/pages/authentication/boxed-login/boxed-login.component.html
@@ -1,43 +1,20 @@
-<!-- style="
-    background-image: url('https://wallpapercave.com/wp/wp2579138.jpg');
-    background-size: cover;" -->
-
-<div class="blank-layout-container justify-content-center align-items-center" >
-  <div
-    class="position-relative row w-100 h-100 bg-gredient justify-content-center"
-  >
+<div class="blank-layout-container justify-content-center align-items-center">
+  <div class="position-relative row w-100 h-100 bg-gredient justify-content-center">
     <div class="col-lg-4 d-flex align-items-center">
       <mat-card class="cardWithShadow boxed-auth">
         <mat-card-content class="p-32">
           <div class="text-center">
-            <a
-              [routerLink]="['/dashboards/dashboard1']"
-              *ngIf="options.theme === 'light'"
-            >
-             
-              <!-- <img
-                src="./assets/images/logos/dark-logo.svg"
-                class="align-middle m-2"
-                alt="logo"
-              /> -->
-              
+            <a [routerLink]="['/dashboards/dashboard1']" *ngIf="options.theme === 'light'">
+
+
             </a>
             <h2 class="align-middle m-2">Internet Security Operation Center</h2>
-            <a
-              [routerLink]="['/dashboards/dashboard1']"
-              *ngIf="options.theme === 'dark'"
-            >
-              <img
-                src="./assets/images/logos/light-logo.svg"
-                class="align-middle m-2"
-                alt="logo"
-              />
+            <a [routerLink]="['/dashboards/dashboard1']" *ngIf="options.theme === 'dark'">
+              <img src="./assets/images/logos/light-logo.svg" class="align-middle m-2" alt="logo" />
             </a>
           </div>
 
-          <!-- <div class="or-border m-t-30"></div> -->
-          
-          <div *ngIf="loginError" class="alert alert-danger"  style="background-color: #f989897d;
+          <div *ngIf="loginError" class="alert alert-danger" style="background-color: #f989897d;
           border-radius: 10px;
           height: 35px;
           display: flex;
@@ -49,89 +26,50 @@
             {{ loginError }}
           </div>
           <form class="m-t-30" [formGroup]="loginForm" (ngSubmit)="submit()">
-            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block"
-              >Username</mat-label
-            >
+            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Username</mat-label>
             <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput formControlName="username" placeholder="Enter user name"/>
+              <input matInput formControlName="username" placeholder="Enter Username" />
               <mat-icon matPrefix>
                 <i-tabler name="user" class="icon-20 d-flex"></i-tabler>
               </mat-icon>
 
-         
-
-              <mat-hint
-
-              
-                  *ngIf="f['username'].touched && f['username'].invalid"
-                  class="m-b-16 error-msg"
-                >
-                  <div
-                    class="text-error"
-                    *ngIf="f['username'].errors && f['username'].errors['required']"
-                  >
-                    Name is required.
-                  </div>
-                  <!-- <div
-                    class="text-error"
-                    *ngIf="f['username'].errors && f['username'].errors['minlength']"
-                  >
-                    Name should be 6 character.
-                  </div> -->
-                </mat-hint>
+              <mat-hint *ngIf="f['username'].touched && f['username'].invalid" class="m-b-16 error-msg">
+                <div class="text-error" *ngIf="f['username'].errors && f['username'].errors['required']">
+                  Username is required.
+                </div>
+              </mat-hint>
             </mat-form-field>
-            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block"
-              >Password</mat-label
-            >
+            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Password</mat-label>
             <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput  [type]="passwordVisible ? 'text' : 'password'" formControlName="password" placeholder="Enter password" />
+              <input matInput [type]="passwordVisible ? 'text' : 'password'" formControlName="password"
+                placeholder="Enter Password" />
               <mat-icon matPrefix>
                 <i-tabler name="lock" class="icon-20 d-flex"></i-tabler>
               </mat-icon>
 
-              <!-- <mat-icon matSuffix style="cursor: pointer;" (click)="ShowPassword()">
-                <i-tabler name="{{ passwordVisible ? 'eye' : 'eye-closed' }} " class="icon-20 d-flex"></i-tabler>
-              </mat-icon> -->
-
-              <mat-icon matSuffix style="cursor: pointer;"  (click)="togglePasswordVisibility()">
+              <mat-icon matSuffix style="cursor: pointer;" (click)="togglePasswordVisibility()">
                 <i-tabler name="{{passwordVisible ? 'eye' : 'eye-closed'}}" class="icon-20 d-flex"></i-tabler>
               </mat-icon>
 
-              <mat-hint
-                  *ngIf="f['password'].touched && f['password'].invalid"
-                  class="m-b-16 error-msg"
-                >
-                  <div
-                    class="text-error"
-                    *ngIf="
+              <mat-hint *ngIf="f['password'].touched && f['password'].invalid" class="m-b-16 error-msg">
+                <div class="text-error" *ngIf="
                       f['password'].errors && f['password'].errors['required']
-                    "
-                  >
-                    Password is required.
-                  </div>
-                </mat-hint>
+                    ">
+                  Password is required.
+                </div>
+              </mat-hint>
             </mat-form-field>
-            
-     
-            <!-- <mat-form-field style="display: none;" appearance="outline" class="w-100" color="primary">
-              <input matInput formControlName="captcha" />
 
-            </mat-form-field> -->
-
-              <button mat-flat-button color="primary" class="w-100" >
-
+            <button mat-flat-button color="primary" class="w-100">
               Sign In
             </button>
           </form>
 
           <div class="text-center mt-2" style="font-size: 100%; margin-top: 10px;">
-            Powered by <a href="https://cdac.in">C-DAC</a> | Version <strong>{{ versionNumber?.version }}</strong>
-        </div>
+            Powered by <a href="https://cdac.in" target="_blank">C-DAC</a> | Version <strong>{{ versionNumber?.version
+              }}</strong>
+          </div>
 
-        <!-- <div class="bg-green">
-          123
-          <i class="bi bi-1-square"></i>
-        </div> -->
         </mat-card-content>
       </mat-card>
     </div>
